--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,29 @@
 <%- include("partials/header") -%>
 
- <!-- code here  -->
-<h1>This is to check if all is set!</h1>
+<div class="container">
+	<div class="container services-section">
+		<h2>Invest In Your Convenience</h2>
 
+		<div class="services-btns"></div>
+		<div class="service-examples">
+			<h3 class="title">Fixers Ready To</h3>
+		</div>
 
-<%- include("partials/footer") -%>
-  
+		<div class="container how-it-works">
+			<div class="sec-header">
+				<h3 class="title">How it Works</h3>
+			</div>
+		</div>
+		<div class="container leadership">
+			<h3 class="title">LeaderShip</h3>
+		</div>
+		<div class="container mission">
+			<h3 class="title">Our Mission</h3>
+		</div>
+		<div class="container contact-us">
+			<h3 class="title">Contact Us</h3>
+		</div>
+	</div>
+
+	<%- include("partials/footer") -%>
+</div>
