--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,8 @@
+<footer>
+  <h4>Footer</h4>
+</footer>
+
+
 <!-- jQuery google cdn -->
 <script src="https://ajax.googleapis.com/ajax/libs/ext-core/3.1.0/ext-core.js"></script>
 <!-- custom js -->
