--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<title>Call to install!</title>
+		<!-- favicon -->
+		<link rel="shortcut icon" href="images/favicon.ico" />
+		<!-- google fonts -->
+		<!-- <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet" /> -->
+		<!-- bootstrap4.3.1 -->
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+			crossorigin="anonymous"
+		/>
+		<!-- custom stylesheet -->
+		<link href="css/styles.css" rel="stylesheet" />
+		<link
+			href="/public/fonts/webfontkit-20190720-172007/stylesheet.css"
+			rel="stylesheet"
+			type="text/html"
+			charset="utf-8"
+		/>
+	</head>
 
-  <title>Call to install!</title>
-  <!-- favicon -->
-  <link rel="shortcut icon" href="images/favicon.ico">
-  <!-- google fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-  <!-- bootstrap4.3.1 -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <!-- custom stylesheet -->
-  <link href="css/styles.css" rel="stylesheet">
-
-</head>
-
-<body>
+	<body>
+		<nav class="navbar navbar-expand-lg navbar bg">
+			<h4>Assist-U</h4>
+		</nav>
+	</body>
+</html>
