add metadata and license information

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,8 +2,20 @@
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
+		<meta name="viewport" 
+			  content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+		<meta name="Vaibhav Srivastava" 
+			  content="Author Email" 
+			  href="mailto:vaibhav.12may95@gmail.com?Subject=Got%20you%20from%AssistU%20Web%20App" />
+		<meta name="Vaibhav Srivastava" 
+			  content="Author GitHub Portfolio" 
+			  href="https://github.com/vai1205" /> 
+		<meta name="author" 
+			  content="Author Personal Portfolio" 
+			  href="https://kathylambert.me" />
+		<meta name="author" 
+			  content="Author GitHub Portfolio" 
+			  href="https://github.com/CodeMeKathy" />
 		<title>Call to install!</title>
 		<!-- favicon -->
 		<link rel="shortcut icon" href="images/favicon.ico" />
@@ -27,8 +39,7 @@
 	</head>
 
 	<body>
-		<nav class="navbar navbar-expand-lg navbar bg">
+		<nav class="navbar navbar-expand-lg navbar-bg-light">
 			<h4>Assist-U</h4>
 		</nav>
-	</body>
-</html>
+	
