--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,3 +8,12 @@ h3 {
 	font-family: 'Marker Felt', fantasy;
 	font-weight: 800px !important;
 }
+.footer{
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin-bottom: 0;
+	background-color: #63032e;
+	color: #e5d8d9;
+}
