--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,11 @@
 <footer>
-  <h4>Footer</h4>
+  <div class="footer text-center">&copy; Copyright 2019
+    <a herf="https://github.com/chingu-voyages/v10-geckos-team-14">ChinguV10 Team#14
+    </a>
+    <br /> Made with ❤️, Lots of ☕️ & Chingu 
+  </div>
 </footer>
+
 
 
 <!-- jQuery google cdn -->
