Updated application title.

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
 		<meta name="author" 
 			  content="Author GitHub Portfolio" 
 			  href="https://github.com/CodeMeKathy" />
-		<title>Call to install!</title>
+		<title>Assist-U | On-Demand Household and Personal Services</title>
 		<!-- favicon -->
 		<link rel="shortcut icon" href="images/favicon.ico" />
 		<!-- google fonts -->
