Update application favicon files with corresponding links.

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,23 +2,29 @@
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" 
-			  content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<meta name="Vaibhav Srivastava" 
-			  content="Author Email" 
-			  href="mailto:vaibhav.12may95@gmail.com?Subject=Got%20you%20from%AssistU%20Web%20App" />
-		<meta name="Vaibhav Srivastava" 
-			  content="Author GitHub Portfolio" 
-			  href="https://github.com/vai1205" /> 
-		<meta name="author" 
-			  content="Author Personal Portfolio" 
-			  href="https://kathylambert.me" />
-		<meta name="author" 
-			  content="Author GitHub Portfolio" 
-			  href="https://github.com/CodeMeKathy" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+		<meta
+			name="Vaibhav Srivastava"
+			content="Author Email"
+			href="mailto:vaibhav.12may95@gmail.com?Subject=Got%20you%20from%AssistU%20Web%20App"
+		/>
+		<meta
+			name="Vaibhav Srivastava"
+			content="Author GitHub Portfolio"
+			href="https://github.com/vai1205"
+		/>
+		<meta name="author" content="Author Personal Portfolio" href="https://kathylambert.me" />
+		<meta name="author" content="Author GitHub Portfolio" href="https://github.com/CodeMeKathy" />
 		<title>Assist-U | On-Demand Household and Personal Services</title>
 		<!-- favicon -->
-		<link rel="shortcut icon" href="images/favicon.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+		<link rel="manifest" href="/site.webmanifest" />
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+		<meta name="msapplication-TileColor" content="#e5d8d9" />
+		<meta name="msapplication-TileImage" content="/mstile-144x144.png" />
+		<meta name="theme-color" content="#ffffff" />
 		<!-- google fonts -->
 		<!-- <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet" /> -->
 		<!-- bootstrap4.3.1 -->
@@ -42,4 +48,5 @@
 		<nav class="navbar navbar-expand-lg navbar-bg-light">
 			<h4>Assist-U</h4>
 		</nav>
-	
+	</body>
+</html>
