add footer background image

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,11 @@
 <footer>
-  <div class="footer text-center">&copy; Copyright 2019
-    <a herf="https://github.com/chingu-voyages/v10-geckos-team-14">ChinguV10 Team#14
-    </a>
-    <br /> Made with ❤️, Lots of ☕️ & Chingu 
+  <img class="footer-img img-responsive" src="images/footer-background.png" alt="footer-img">
+  <div class="footer text-center">
+    <p class="footer-copyright-text">&copy; Copyright 2019
+      <a herf="https://github.com/chingu-voyages/v10-geckos-team-14">
+      ChinguV10 Team#14
+    </p></a> 
+    <p class="footer-copyright-text">Made with ❤️, Lots of ☕️ & Chingu </p>
   </div>
 </footer>
 
