--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,6 +14,29 @@ h3 {
 	left: 0;
 	right: 0;
 	margin-bottom: 0;
-	background-color: #63032e;
-	color: #e5d8d9;
+	
+}
+.footer-img{
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin-bottom: 0;
+	z-index: -1;
+	width: 100%;
+	height: 20%;
+}
+.footer-copyright-text{
+	margin: 0;
+	padding: 0 0 0.2rem 0;
+	font-size: 0.9rem;
+	color: #63032e;
+}
+@media(max-width:576px){
+	.footer-copyright-text{
+		font-size: 0.7rem;
+	}
+	.footer-img{
+		height: 15%;
+	}	
 }
