--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,13 +1,35 @@
 <%- include("partials/header") -%>
 <div class="container">
-	<div class="container services-section">
+	<section class="container services-section text-center">
 		<h2>Invest In Your Convenience</h2>
-
-		<div class="services-btns"></div>
+		<div class="services-btns container">
+			<div class="row">
+				<div class="col-lg-4 col-md-6 col-sm-12">
+					<img src="images/service-icons/repairs.svg" width="100" height="100" alt="saw">
+				</div>
+				<div class="col-lg-4 col-md-6 col-sm-12">
+						<img src="images/service-icons/plumbing.svg" width="100" height="100" alt="saw">
+					</div>
+				<div class="col-lg-4 col-md-6 col-sm-12">
+					<img src="images/service-icons/housekeeping.svg" width="100" height="100" alt="saw">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-4 col-md-6 col-sm-12">
+					<img src="images/service-icons/administrative.svg" width="100" height="100" alt="saw">
+				</div>
+				<div class="col-lg-4 col-md-6 col-sm-12">
+						<img src="images/service-icons/lawncare.svg" width="100" height="100" alt="saw">
+					</div>
+				<div class="col-lg-4 col-md-6 col-sm-12">
+					<img src="images/service-icons/personal-driver.svg" width="100" height="100" alt="saw">
+				</div>
+			</div>
+		</div>
 		<div class="service-examples">
 			<h3 class="title">Fixers Ready To</h3>
 		</div>
-
+	</section>
 		<div class="container how-it-works">
 			<div class="sec-header">
 				<h3 class="title">How it Works</h3>
@@ -23,5 +45,5 @@
 			<h3 class="title">Contact Us</h3>
 		</div>
 	</div>
-</div>
+
 <%- include("partials/footer") -%>
