--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,7 +26,7 @@
 		<meta name="msapplication-TileImage" content="/mstile-144x144.png" />
 		<meta name="theme-color" content="#ffffff" />
 		<!-- google fonts -->
-		<!-- <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet" /> -->
+		<link href="https://fonts.googleapis.com/css?family=Domine|Fredoka+One&display=swap" 	  rel="stylesheet">
 		<!-- bootstrap4.3.1 -->
 		<link
 			rel="stylesheet"
@@ -36,16 +36,19 @@
 		/>
 		<!-- custom stylesheet -->
 		<link href="css/styles.css" rel="stylesheet" />
-		<link
+		<!-- <link
 			href="/public/fonts/webfontkit-20190720-172007/stylesheet.css"
 			rel="stylesheet"
 			type="text/html"
 			charset="utf-8"
-		/>
+		/> -->
 	</head>
 
 	<body>
-		<nav class="navbar navbar-expand-lg navbar-bg-light">
-			<h4>Assist-U</h4>
-		</nav>
+	<nav class="navbar">
+		<a class="navbar-band" href="#">
+			<img src="android-chrome-192x192.png" width="50" height="50" class="d-inline-block align-top" alt="logo-assistU">
+			<h1>AssistU</h1>
+		</a>
+	</nav>
 	
