add alt tags to service images

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,24 +5,24 @@
 		<div class="services-btns container">
 			<div class="row">
 				<div class="col-lg-4 col-md-6 col-sm-12">
-					<img src="images/service-icons/repairs.svg" width="100" height="100" alt="saw">
+					<img src="images/service-icons/repairs.png" width="100" height="100" alt="repairs-icons">
 				</div>
 				<div class="col-lg-4 col-md-6 col-sm-12">
-						<img src="images/service-icons/plumbing.svg" width="100" height="100" alt="saw">
+						<img src="images/service-icons/plumbing.png" width="100" height="100" alt="plumbing-icon">
 					</div>
 				<div class="col-lg-4 col-md-6 col-sm-12">
-					<img src="images/service-icons/housekeeping.svg" width="100" height="100" alt="saw">
+					<img src="images/service-icons/housekeeping.png" width="100" height="100" alt="housekeeping-icon">
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-4 col-md-6 col-sm-12">
-					<img src="images/service-icons/administrative.svg" width="100" height="100" alt="saw">
+					<img src="images/service-icons/admin.png" width="100" height="100" alt="admin-icon">
 				</div>
 				<div class="col-lg-4 col-md-6 col-sm-12">
-						<img src="images/service-icons/lawncare.svg" width="100" height="100" alt="saw">
+						<img src="images/service-icons/lawncare.png" width="100" height="100" alt="lawncare-icon">
 					</div>
 				<div class="col-lg-4 col-md-6 col-sm-12">
-					<img src="images/service-icons/personal-driver.svg" width="100" height="100" alt="saw">
+					<img src="images/service-icons/personal-driver.png" width="100" height="100" alt="personal-driver-icon">
 				</div>
 			</div>
 		</div>
