--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,22 +1,43 @@
 body {
-	background-color: #e5d8d9;
+	background-color: #f1f7f0;
 	color: #63032e;
 	font-family: 'Domine', serif;
 }
-h1,h2,h3,h4,h5,h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
 	font-family: 'Fredoka One', cursive;
 }
-.row{
+.sub-title {
+	font-size: 16px;
+	text-align: center;
+}
+
+.services-btns .row {
 	padding: 1rem 7.5rem 0.5rem 7.5rem;
 }
-.footer{
+.mission {
+	background-color: #e1e3f0;
+	padding: 4em;
+	width: 100% !important;
+}
+.mission .row {
+	padding: 0.4rem;
+}
+.footer {
 	position: fixed;
 	bottom: 0;
 	left: 0;
 	right: 0;
-	margin-bottom: 0;	
+	margin-bottom: 0;
+	position: relative;
+	font-family: 'Fredoka One', cursive;
 }
-.footer-img{
+
+.footer-img {
 	position: fixed;
 	bottom: 0;
 	left: 0;
@@ -26,17 +47,17 @@ h1,h2,h3,h4,h5,h6{
 	width: 100%;
 	height: 20%;
 }
-.footer-copyright-text{
+.footer-copyright-text {
 	margin: 0;
 	padding: 0 0 0.2rem 0;
 	font-size: 0.9rem;
 	color: #63032e;
 }
-@media(max-width:576px){
-	.footer-copyright-text{
+@media (max-width: 576px) {
+	.footer-copyright-text {
 		font-size: 0.7rem;
 	}
-	.footer-img{
+	.footer-img {
 		height: 15%;
-	}	
+	}
 }
