--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,7 +26,10 @@
 		<meta name="msapplication-TileImage" content="/mstile-144x144.png" />
 		<meta name="theme-color" content="#ffffff" />
 		<!-- google fonts -->
-		<link href="https://fonts.googleapis.com/css?family=Domine|Fredoka+One&display=swap" 	  rel="stylesheet">
+		<link
+			href="https://fonts.googleapis.com/css?family=Domine|Fredoka+One&display=swap"
+			rel="stylesheet"
+		/>
 		<!-- bootstrap4.3.1 -->
 		<link
 			rel="stylesheet"
@@ -45,10 +48,16 @@
 	</head>
 
 	<body>
-	<nav class="navbar">
-		<a class="navbar-band" href="#">
-			<img src="android-chrome-192x192.png" width="50" height="50" class="d-inline-block align-top" alt="logo-assistU">
-			<h1>AssistU</h1>
-		</a>
-	</nav>
-	
+		<nav class="navbar">
+			<!-- <img class="header-img img-responsive" src="images/header-background.png" alt="header-img" /> -->
+
+			<a class="logo" href="#">
+				<img src="android-chrome-192x192.png" width="50" height="50" class="" alt="logo-assistU" />
+				<h1 class="brand-name">AssistU</h1>
+			</a>
+			<a href="#">
+				<h6 class="sign-in-up">Sign In or Sign Up</h6>
+			</a>
+		</nav>
+	</body>
+</html>
