--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,35 +1,53 @@
 <%- include("partials/header") -%>
 <div class="container">
+	<!-- service section begins -->
 	<section class="container services-section text-center">
 		<h1>Invest In Your Convenience</h1>
 		<div class="services-btns container">
-			<div class="row">
+			<div class="row row-service-icons">
 				<div class="col-lg-4 col-md-6 col-sm-12">
-					<img src="images/service-icons/repairs.png" width="200" height="200" alt="repairs-icons">
+					<img src="images/service-icons/repairs.png" width="180" height="180" alt="repairs-icons" class="service-img">
 				</div>
 				<div class="col-lg-4 col-md-6 col-sm-12">
-						<img src="images/service-icons/plumbing.png" width="200" height="200" alt="plumbing-icon">
+						<img src="images/service-icons/plumbing.png" width="180" height="180" alt="plumbing-icon" class="service-img">
 					</div>
 				<div class="col-lg-4 col-md-6 col-sm-12">
-					<img src="images/service-icons/housekeeping.png" width="200" height="200" alt="housekeeping-icon">
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-4 col-md-6 col-sm-12">
-					<img src="images/service-icons/admin.png" width="200" height="200" alt="admin-icon">
+					<img src="images/service-icons/housekeeping.png" width="180" height="180" alt="housekeeping-icon" class="service-img">
 				</div>
 				<div class="col-lg-4 col-md-6 col-sm-12">
-						<img src="images/service-icons/lawncare.png" width="200" height="200" alt="lawncare-icon">
+					<img src="images/service-icons/admin.png" width="180" height="180" alt="admin-icon" class="service-img">
+				</div>
+				<div class="col-lg-4 col-md-6 col-sm-12">
+						<img src="images/service-icons/lawncare.png" width="180" height="180" alt="lawncare-icon" class="service-img">
 					</div>
 				<div class="col-lg-4 col-md-6 col-sm-12">
-					<img src="images/service-icons/personal-driver.png" width="200" height="200" alt="personal-driver-icon">
+					<img src="images/service-icons/personal-driver.png" width="180" height="180" alt="personal-driver-icon" class="service-img">
 				</div>
 			</div>
 		</div>
-		<div class="service-examples">
-			<h3 class="title">Fixers Ready To</h3>
+		<h3 style="padding-top: 4rem;">Fixers Ready to</h3>
+		<div class="container">
+			<div class="row row-fixers-ready-to">
+				<div class="col-lg-6 text-left" >
+					<ul>
+						<li>Unclog your sink</li>
+						<li>Assemble Furniture</li>
+						<li>Fix your leak</li>
+						<li>Build a tree house</li>
+					</ul>
+				</div>
+				<div class="col-lg-6 text-left">
+						<ul>
+							<li>Unclog your sink</li>
+							<li>Assemble Furniture</li>
+							<li>Fix your leak</li>
+							<li>Build a tree house</li>
+						</ul>
+				</div>
+			</div>
 		</div>
-	</section>
+	</section> 
+	<!-- end of service section -->
 		<div class="container how-it-works">
 			<div class="sec-header">
 				<h3 class="title">How it Works</h3>
