update services section

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer>
-  <img class="footer-img img-responsive" src="images/footer-background.png" alt="footer-img">
+  <img class="footer-img" src="images/footer-background.png" alt="footer-img">
   <div class="footer text-center">
     <p class="footer-copyright-text">&copy; Copyright 2019
       <a herf="https://github.com/chingu-voyages/v10-geckos-team-14">
