--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -38,11 +38,11 @@ h6 {
 }
 
 .footer-img {
-	position: fixed;
+	position: absolute;
 	bottom: 0;
 	left: 0;
 	right: 0;
-	margin-bottom: 0;
+	margin-bottom: -25rem;
 	z-index: -1;
 	width: 100%;
 	height: 20%;
