--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,86 +1,69 @@
 <%- include("partials/header") -%>
-<div class="container">
-	<section class="container services-section text-center">
-		<h1>Invest In Your Convenience</h1>
-		<div class="services-btns container">
-			<div class="row">
-				<div class="col-lg-4 col-md-6 col-sm-12">
-					<img
-						src="images/service-icons/repairs.png"
-						width="200"
-						height="200"
-						alt="repairs-icons"
-					/>
-				</div>
-				<div class="col-lg-4 col-md-6 col-sm-12">
-					<img
-						src="images/service-icons/plumbing.png"
-						width="200"
-						height="200"
-						alt="plumbing-icon"
-					/>
-				</div>
-				<div class="col-lg-4 col-md-6 col-sm-12">
-					<img
-						src="images/service-icons/housekeeping.png"
-						width="200"
-						height="200"
-						alt="housekeeping-icon"
-					/>
-				</div>
+
+<section class="container services-section text-center">
+	<h1>Invest In Your Convenience</h1>
+	<div class="services-btns container">
+		<div class="row">
+			<div class="col-lg-4 col-md-6 col-sm-12">
+				<img src="images/service-icons/repairs.png" width="200" height="200" alt="repairs-icons" />
 			</div>
-			<div class="row">
-				<div class="col-lg-4 col-md-6 col-sm-12">
-					<img src="images/service-icons/admin.png" width="200" height="200" alt="admin-icon" />
-				</div>
-				<div class="col-lg-4 col-md-6 col-sm-12">
-					<img
-						src="images/service-icons/lawncare.png"
-						width="200"
-						height="200"
-						alt="lawncare-icon"
-					/>
-				</div>
-				<div class="col-lg-4 col-md-6 col-sm-12">
-					<img
-						src="images/service-icons/personal-driver.png"
-						width="200"
-						height="200"
-						alt="personal-driver-icon"
-					/>
-				</div>
+			<div class="col-lg-4 col-md-6 col-sm-12">
+				<img src="images/service-icons/plumbing.png" width="200" height="200" alt="plumbing-icon" />
+			</div>
+			<div class="col-lg-4 col-md-6 col-sm-12">
+				<img
+					src="images/service-icons/housekeeping.png"
+					width="200"
+					height="200"
+					alt="housekeeping-icon"
+				/>
 			</div>
 		</div>
-		<div class="service-examples">
-			<h3 class="title">Fixers Ready To</h3>
-		</div>
-	</section>
-	<section class="container how-it-works text-center">
-		<div class="sec-header">
-			<h3 class="title">How it Works</h3>
-		</div>
-	</section>
-	<section class="container leadership text-center">
-		<h3 class="title">LeaderShip</h3>
-	</section>
-	<section class="container mission text-center">
 		<div class="row">
-			<h3 class="title">Our Mission</h3>
+			<div class="col-lg-4 col-md-6 col-sm-12">
+				<img src="images/service-icons/admin.png" width="200" height="200" alt="admin-icon" />
+			</div>
+			<div class="col-lg-4 col-md-6 col-sm-12">
+				<img src="images/service-icons/lawncare.png" width="200" height="200" alt="lawncare-icon" />
+			</div>
+			<div class="col-lg-4 col-md-6 col-sm-12">
+				<img
+					src="images/service-icons/personal-driver.png"
+					width="200"
+					height="200"
+					alt="personal-driver-icon"
+				/>
+			</div>
 		</div>
-		<div class="row">
-			<h6 class="sub-title">What we believe in</h6>
-		</div>
-		<div class="row">
-			<p>
-				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-				been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-				galley of type and scrambled it to make a type specimen book.
-			</p>
-		</div>
-	</section>
-	<section class="container contact-us text-center">
-		<h3 class="title">Contact Us</h3>
-	</section>
-</div>
+	</div>
+	<div class="service-examples">
+		<h3 class="title">Fixers Ready To</h3>
+	</div>
+</section>
+<section class="container how-it-works text-center">
+	<div class="sec-header">
+		<h3 class="title">How it Works</h3>
+	</div>
+</section>
+<section class="leadership text-center">
+	<h3 class="title">LeaderShip</h3>
+</section>
+<section class="mission">
+	<h3 class="sec-title rw">Our Mission</h3>
+
+	<h6 class="sub-title rw">What we believe in</h6>
+
+	<p class="rw">
+		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+		the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+		of type and scrambled it to make a type specimen book. Lorem Ipsum is simply dummy text of the
+		printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever
+		since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+		specimen book.
+	</p>
+</section>
+<section class="container contact-us text-center">
+	<h3 class="title">Contact Us</h3>
+</section>
 
 <%- include("partials/footer") -%>
