--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -49,14 +49,23 @@
 
 	<body>
 		<nav class="navbar">
-			<!-- <img class="header-img img-responsive" src="images/header-background.png" alt="header-img" /> -->
-
-			<a class="logo" href="#">
-				<img src="android-chrome-192x192.png" width="50" height="50" class="" alt="logo-assistU" />
-				<h1 class="brand-name">AssistU</h1>
+			<img
+				class="header-bk-img"
+				style="display:inline-block;"
+				src="images/header-background.png"
+				alt="header-img"
+			/>
+			<a class="logo-img-link" href="#">
+				<img
+					src="android-chrome-192x192.png"
+					width="50"
+					height="50"
+					class="logo-img"
+					alt="logo-assistU"
+				/>
+				<span class="brand-name">AssistU</span>
 			</a>
 			<a href="#">
 				<h6 class="sign-in-up">Sign In or Sign Up</h6>
 			</a>
 		</nav>
-	
