Correct merge error in How it Works Section.  Add remaining section beginning and ending tags.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -47,35 +47,23 @@
 				</div>
 			</div>
 		</section> 
-		<div class="container how-it-works">
-			<div class="sec-header">
-				<h3 class="title">How it Works</h3>
-			</div>
-			<div class="col-lg-4 col-md-6 col-sm-12">
-				<img src="images/service-icons/lawncare.png" width="200" height="200" alt="lawncare-icon" />
-			</div>
-			<div class="col-lg-4 col-md-6 col-sm-12">
-				<img
-					src="images/service-icons/personal-driver.png"
-					width="200"
-					height="200"
-					alt="personal-driver-icon"
-				/>
-			</div>
-		</div>
-	</div>
-	<div class="service-examples">
-		<h3 class="title">Fixers Ready To</h3>
-	</div>
-</section>
+<!-- end of service section -->
+
+<!-- How it Works section begins -->
 <section class="container how-it-works text-center">
 	<div class="sec-header">
 		<h3 class="title">How it Works</h3>
 	</div>
 </section>
+<!-- end of How it Works section -->
+
+<!-- LeaderShip section begins -->
 <section class="leadership text-center">
 	<h3 class="title">LeaderShip</h3>
 </section>
+<!-- end of LeaderShip section -->
+
+<!-- Our Mission section begins -->
 <section class="mission">
 	<h3 class="sec-title rw">Our Mission</h3>
 
@@ -90,6 +78,9 @@
 		specimen book.
 	</p>
 </section>
+<!-- end of Our Mission section -->
+
+<!-- Contact Us section begins -->
 <section class="container contact-us text-center">
 	<h3 class="title">Contact Us</h3>
 </section>
