--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,4 @@
+/* Overall App Styling */
 body {
 	background-color: #f1f7f0;
 	color: #63032e;
@@ -13,21 +14,15 @@ h6 {
 	font-family: 'Fredoka One', cursive;
 	padding: 0.5rem 0;
 }
-li {
-	font-size: 1.2rem;
-}
-.service-img {
-	margin-top: 1.5rem;
-}
 .sub-title {
 	font-size: 16px;
 }
 
+/* Navbar */
 .navbar a {
 	text-decoration: none;
 	color: #63032e;
 }
-
 .logo-img-link {
 	margin-top: 0.5em;
 }
@@ -37,11 +32,9 @@ li {
 	font-style: italic;
 	margin-top: 1em;
 }
-
 .sign-in-up h6 {
 	text-align: right !important;
 }
-
 .header-bk-img {
 	position: absolute;
 	top: 0;
@@ -52,12 +45,19 @@ li {
 	width: 100%;
 	height: auto;
 }
+
+/* Services Section */
+li {
+	font-size: 1.2rem;
+}
 .row {
 	padding: 1rem 7.5rem 0.5rem 7.5rem;
 }
 .service-img {
 	margin-top: 1.5rem;
 }
+
+/* Our Mission Section */
 .mission {
 	background-color: #e1e3f0;
 	padding: 4em;
@@ -66,24 +66,23 @@ li {
 .mission .rw {
 	padding: 0.4rem;
 }
+
+/* Footer */
 .footer {
-	position: fixed;
+	position: relative;
 	bottom: 0;
 	left: 0;
 	right: 0;
 	margin-bottom: 0;
-	position: relative;
 	font-family: 'Fredoka One', cursive;
-	margin-bottom: 0;
 }
-
 .footer-img {
 	position: absolute;
 	bottom: 0;
 	left: 0;
 	right: 0;
-	margin-bottom: -25rem;
-	z-index: -1;
+	margin-bottom: -37rem;
+	z-index: -10;
 	width: 100%;
 	height: 20%;
 }
@@ -93,6 +92,8 @@ li {
 	font-size: 0.9rem;
 	color: #63032e;
 }
+
+/* Media Queries */
 @media (max-width: 576px) {
 	.footer-copyright-text {
 		font-size: 0.7rem;
