--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -39,12 +39,6 @@
 		/>
 		<!-- custom stylesheet -->
 		<link href="css/styles.css" rel="stylesheet" />
-		<!-- <link
-			href="/public/fonts/webfontkit-20190720-172007/stylesheet.css"
-			rel="stylesheet"
-			type="text/html"
-			charset="utf-8"
-		/> -->
 	</head>
 
 	<body>
@@ -57,7 +51,7 @@
 			/>
 			<a class="logo-img-link" href="#">
 				<img
-					src="android-chrome-192x192.png"
+					src="/images/helpingHands.png"
 					width="50"
 					height="50"
 					class="logo-img"
@@ -69,3 +63,4 @@
 				<h6 class="sign-in-up">Sign In or Sign Up</h6>
 			</a>
 		</nav>
+
