Add leadershipSection brnach.  Add section text with images and css styling.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,51 +1,87 @@
 <%- include("partials/header") -%>
-	<!-- service section begins -->
-	<section class="container services-section text-center">
-			<h1>Invest In Your Convenience</h1>
-			<div class="services-btns container">
-				<div class="row row-service-icons">
-					<div class=" col-lg-4 col-md-6 col-sm-12">
-						<img src="images/service-icons/repairs.png" width="180" height="180" alt="repairs-icons" class="service-img">
-					</div>
-					<div class="col-lg-4 col-md-6 col-sm-12">
-							<img src="images/service-icons/plumbing.png" width="180" height="180" alt="plumbing-icon" class="service-img">
-						</div>
-					<div class="col-lg-4 col-md-6 col-sm-12">
-						<img src="images/service-icons/housekeeping.png" width="180" height="180" alt="housekeeping-icon" class="service-img">
-					</div>
-					<div class="col-lg-4 col-md-6 col-sm-12">
-						<img src="images/service-icons/admin.png" width="180" height="180" alt="admin-icon" class="service-img">
-					</div>
-					<div class="col-lg-4 col-md-6 col-sm-12">
-							<img src="images/service-icons/lawncare.png" width="180" height="180" alt="lawncare-icon" class="service-img">
-						</div>
-					<div class="col-lg-4 col-md-6 col-sm-12">
-						<img src="images/service-icons/personal-driver.png" width="180" height="180" alt="personal-driver-icon" class="service-img">
-					</div>
-				</div>
+<!-- service section begins -->
+<section class="container services-section text-center">
+	<h1>Invest In Your Convenience</h1>
+	<div class="services-btns container">
+		<div class="row row-service-icons">
+			<div class=" col-lg-4 col-md-6 col-sm-12">
+				<img
+					src="images/service-icons/repairs.png"
+					width="180"
+					height="180"
+					alt="repairs-icons"
+					class="service-img"
+				/>
 			</div>
-			<h3 style="padding-top: 4rem;">Fixers Ready to</h3>
-			<div class="container">
-				<div class="row row-fixers-ready-to">
-					<div class="col-lg-6 text-left" >
-						<ul>
-							<li>Unclog your sink</li>
-							<li>Assemble Furniture</li>
-							<li>Fix your leak</li>
-							<li>Build a tree house</li>
-						</ul>
-					</div>
-					<div class="col-lg-6 text-left">
-							<ul>
-								<li>Unclog your sink</li>
-								<li>Assemble Furniture</li>
-								<li>Fix your leak</li>
-								<li>Build a tree house</li>
-							</ul>
-					</div>
-				</div>
+			<div class="col-lg-4 col-md-6 col-sm-12">
+				<img
+					src="images/service-icons/plumbing.png"
+					width="180"
+					height="180"
+					alt="plumbing-icon"
+					class="service-img"
+				/>
 			</div>
-		</section> 
+			<div class="col-lg-4 col-md-6 col-sm-12">
+				<img
+					src="images/service-icons/housekeeping.png"
+					width="180"
+					height="180"
+					alt="housekeeping-icon"
+					class="service-img"
+				/>
+			</div>
+			<div class="col-lg-4 col-md-6 col-sm-12">
+				<img
+					src="images/service-icons/admin.png"
+					width="180"
+					height="180"
+					alt="admin-icon"
+					class="service-img"
+				/>
+			</div>
+			<div class="col-lg-4 col-md-6 col-sm-12">
+				<img
+					src="images/service-icons/lawncare.png"
+					width="180"
+					height="180"
+					alt="lawncare-icon"
+					class="service-img"
+				/>
+			</div>
+			<div class="col-lg-4 col-md-6 col-sm-12">
+				<img
+					src="images/service-icons/personal-driver.png"
+					width="180"
+					height="180"
+					alt="personal-driver-icon"
+					class="service-img"
+				/>
+			</div>
+		</div>
+	</div>
+	<h3 style="padding-top: 4rem;">Fixers Ready to</h3>
+	<div class="container">
+		<div class="row row-fixers-ready-to">
+			<div class="col-lg-6 text-left">
+				<ul>
+					<li>Unclog your sink</li>
+					<li>Assemble Furniture</li>
+					<li>Fix your leak</li>
+					<li>Build a tree house</li>
+				</ul>
+			</div>
+			<div class="col-lg-6 text-left">
+				<ul>
+					<li>Unclog your sink</li>
+					<li>Assemble Furniture</li>
+					<li>Fix your leak</li>
+					<li>Build a tree house</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</section>
 <!-- end of service section -->
 
 <!-- How it Works section begins -->
@@ -58,7 +94,36 @@
 
 <!-- LeaderShip section begins -->
 <section class="leadership text-center">
-	<h3 class="title">LeaderShip</h3>
+	<h2 class="sec-title">LeaderShip</h2>
+	<h6 class="sub-title rw">What we believe in</h6>
+	<div class="row"> <!-- TODO: - [ ] Fix additional created horizontal padding on the right -->
+		<div class="col bio">
+			<img
+				src="/images/@vai.png"
+				class="bio-img"
+				alt="Kathy Lambert image"
+			/>
+			<h5>Vaibhav Srivastava</h5>
+			<p class="bio-text">
+				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+				been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+				galley of type and scrambled it to make a type specimen book.
+			</p>
+		</div>
+		<div class="col bio">
+			<img
+				src="/images/@CMK.png"
+				class="bio-img"
+				alt="Kathy Lambert image"
+			/>
+			<h5>Kathy Lambert</h5>
+			<p class="bio-text">
+				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+				been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+				galley of type and scrambled it to make a type specimen book.
+			</p>
+		</div>
+	</div>
 </section>
 <!-- end of LeaderShip section -->
 
