--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -60,6 +60,16 @@ li {
 	margin-top: 1.5rem;
 }
 
+/* LeaderShip Section */
+.leadership {
+	width: 100;
+}
+
+.bio-text {
+	/* margin: auto 72px 1.5em 20em; */
+	margin: 0.5em 5em;
+}
+
 /* Our Mission Section */
 .mission {
 	background-color: #e1e3f0;
