Add section classes to services section, mission and contact us with css styling.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,51 +1,87 @@
 <%- include("partials/header") -%>
-	<!-- service section begins -->
-	<section class="container services-section text-center">
-			<h1>Invest In Your Convenience</h1>
-			<div class="services-btns container">
-				<div class="row row-service-icons">
-					<div class=" col-lg-4 col-md-6 col-sm-12">
-						<img src="images/service-icons/repairs.png" width="180" height="180" alt="repairs-icons" class="service-img">
-					</div>
-					<div class="col-lg-4 col-md-6 col-sm-12">
-							<img src="images/service-icons/plumbing.png" width="180" height="180" alt="plumbing-icon" class="service-img">
-						</div>
-					<div class="col-lg-4 col-md-6 col-sm-12">
-						<img src="images/service-icons/housekeeping.png" width="180" height="180" alt="housekeeping-icon" class="service-img">
-					</div>
-					<div class="col-lg-4 col-md-6 col-sm-12">
-						<img src="images/service-icons/admin.png" width="180" height="180" alt="admin-icon" class="service-img">
-					</div>
-					<div class="col-lg-4 col-md-6 col-sm-12">
-							<img src="images/service-icons/lawncare.png" width="180" height="180" alt="lawncare-icon" class="service-img">
-						</div>
-					<div class="col-lg-4 col-md-6 col-sm-12">
-						<img src="images/service-icons/personal-driver.png" width="180" height="180" alt="personal-driver-icon" class="service-img">
-					</div>
-				</div>
+<!-- service section begins -->
+<section class="container services-section text-center">
+	<h1 class="sec-title">Invest In Your Convenience</h1>
+	<div class="services-btns container">
+		<div class="row row-service-icons">
+			<div class=" col-lg-4 col-md-6 col-sm-12">
+				<img
+					src="images/service-icons/repairs.png"
+					width="180"
+					height="180"
+					alt="repairs-icons"
+					class="service-img"
+				/>
 			</div>
-			<h3 style="padding-top: 4rem;">Fixers Ready to</h3>
-			<div class="container">
-				<div class="row row-fixers-ready-to">
-					<div class="col-lg-6 text-left" >
-						<ul>
-							<li>Unclog your sink</li>
-							<li>Assemble Furniture</li>
-							<li>Fix your leak</li>
-							<li>Build a tree house</li>
-						</ul>
-					</div>
-					<div class="col-lg-6 text-left">
-							<ul>
-								<li>Unclog your sink</li>
-								<li>Assemble Furniture</li>
-								<li>Fix your leak</li>
-								<li>Build a tree house</li>
-							</ul>
-					</div>
-				</div>
+			<div class="col-lg-4 col-md-6 col-sm-12">
+				<img
+					src="images/service-icons/plumbing.png"
+					width="180"
+					height="180"
+					alt="plumbing-icon"
+					class="service-img"
+				/>
 			</div>
-		</section> 
+			<div class="col-lg-4 col-md-6 col-sm-12">
+				<img
+					src="images/service-icons/housekeeping.png"
+					width="180"
+					height="180"
+					alt="housekeeping-icon"
+					class="service-img"
+				/>
+			</div>
+			<div class="col-lg-4 col-md-6 col-sm-12">
+				<img
+					src="images/service-icons/admin.png"
+					width="180"
+					height="180"
+					alt="admin-icon"
+					class="service-img"
+				/>
+			</div>
+			<div class="col-lg-4 col-md-6 col-sm-12">
+				<img
+					src="images/service-icons/lawncare.png"
+					width="180"
+					height="180"
+					alt="lawncare-icon"
+					class="service-img"
+				/>
+			</div>
+			<div class="col-lg-4 col-md-6 col-sm-12">
+				<img
+					src="images/service-icons/personal-driver.png"
+					width="180"
+					height="180"
+					alt="personal-driver-icon"
+					class="service-img"
+				/>
+			</div>
+		</div>
+	</div>
+	<h3 class="sub-title" style="padding-top: 4rem;">Fixers Ready to</h3>
+	<div class="container">
+		<div class="row row-fixers-ready-to">
+			<div class="col-lg-6 text-left">
+				<ul>
+					<li>Unclog your sink</li>
+					<li>Assemble Furniture</li>
+					<li>Fix your leak</li>
+					<li>Build a tree house</li>
+				</ul>
+			</div>
+			<div class="col-lg-6 text-left">
+				<ul>
+					<li>Unclog your sink</li>
+					<li>Assemble Furniture</li>
+					<li>Fix your leak</li>
+					<li>Build a tree house</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</section>
 <!-- end of service section -->
 
 <!-- How it Works section begins -->
@@ -64,7 +100,7 @@
 
 <!-- Our Mission section begins -->
 <section class="mission">
-	<h3 class="sec-title rw">Our Mission</h3>
+	<h1 class="sec-title rw">Our Mission</h1>
 
 	<h6 class="sub-title rw">What we believe in</h6>
 
@@ -81,7 +117,7 @@
 
 <!-- Contact Us section begins -->
 <section class="container contact-us text-center">
-	<h3 class="title">Contact Us</h3>
+	<h1 class="sec-title">Contact Us</h1>
 </section>
 
 <%- include("partials/footer") -%>
