--- a/views/home.ejs
+++ b/views/home.ejs
@@ -96,12 +96,14 @@
 <section class="leadership text-center">
 	<h2 class="sec-title">LeaderShip</h2>
 	<h6 class="sub-title rw">What we believe in</h6>
-	<div class="row"> <!-- TODO: - [ ] Fix additional created horizontal padding on the right -->
-		<div class="col bio">
+	<div class="container">
+		<div class="row">
+		 <div class="col-lg-6 bio-div">
 			<img
 				src="/images/@vai.png"
 				class="bio-img"
 				alt="Kathy Lambert image"
+				width="200" height="200"
 			/>
 			<h5>Vaibhav Srivastava</h5>
 			<p class="bio-text">
@@ -110,11 +112,11 @@
 				galley of type and scrambled it to make a type specimen book.
 			</p>
 		</div>
-		<div class="col bio">
+		<div class="col-lg-6 bio-div">
 			<img
 				src="/images/@CMK.png"
 				class="bio-img"
-				alt="Kathy Lambert image"
+				alt="Kathy Lambert image" width="200" height="200"
 			/>
 			<h5>Kathy Lambert</h5>
 			<p class="bio-text">
@@ -122,6 +124,7 @@
 				been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
 				galley of type and scrambled it to make a type specimen book.
 			</p>
+		</div>
 		</div>
 	</div>
 </section>
