Correct works-div structure with and styling.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -99,8 +99,7 @@
 			Select your fixer and complete reservation form.
 		</h6>
 		<p class="rw">
-			Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis
-			est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere
+			Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere.
 		</p>
 	</div>
 </section>
@@ -112,33 +111,36 @@
 	<h6 class="sub-title rw">What we believe in</h6>
 	<div class="container">
 		<div class="row">
-		 <div class="col-lg-6 bio-div">
-			<img
-				src="/images/@vai.png"
-				class="bio-img"
-				alt="Kathy Lambert image"
-				width="200" height="200"
-			/>
-			<h5>Vaibhav Srivastava</h5>
-			<p class="bio-text">
-				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-				been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-				galley of type and scrambled it to make a type specimen book.
-			</p>
-		</div>
-		<div class="col-lg-6 bio-div">
-			<img
-				src="/images/@CMK.png"
-				class="bio-img"
-				alt="Kathy Lambert image" width="200" height="200"
-			/>
-			<h5>Kathy Lambert</h5>
-			<p class="bio-text">
-				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-				been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-				galley of type and scrambled it to make a type specimen book.
-			</p>
-		</div>
+			<div class="col-lg-6 bio-div">
+				<img
+					src="/images/@vai.png"
+					class="bio-img"
+					alt="Kathy Lambert image"
+					width="200"
+					height="200"
+				/>
+				<h5>Vaibhav Srivastava</h5>
+				<p class="bio-text">
+					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+					been the industry's standard dummy text ever since the 1500s, when an unknown printer took
+					a galley of type and scrambled it to make a type specimen book.
+				</p>
+			</div>
+			<div class="col-lg-6 bio-div">
+				<img
+					src="/images/@CMK.png"
+					class="bio-img"
+					alt="Kathy Lambert image"
+					width="200"
+					height="200"
+				/>
+				<h5>Kathy Lambert</h5>
+				<p class="bio-text">
+					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+					been the industry's standard dummy text ever since the 1500s, when an unknown printer took
+					a galley of type and scrambled it to make a type specimen book.
+				</p>
+			</div>
 		</div>
 	</div>
 </section>
