--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -65,16 +65,19 @@ li {
 .bio-div {
 	padding: 2% 7%;
 }
-.bio-text{
+.bio-text {
 	text-align: justify;
 }
 /* How it Works Section */
 .works-bk-img {
+	position: relative;
+	height: 60%;
 	width: 100%;
 	z-index: -1;
 }
 .works-div {
-	z-index: 1;
+	position: absolute;
+	top: 78rem;
 }
 /* section .how-it-works {
 	background-image: url('https://github.com/chingu-voyages/v10-geckos-team-14/blob/landingPage/public/images/H-t-Wk-background.png?raw=true')
